<resources>
    <string name="app_name">Area31</string>
    <string name="digits_number">+0123456789</string>
    <string name="digits">abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789,.()-</string>
    <string name="asiajakarta">Asia/Jakarta</string>
    <string name="good_morning">Good Morning</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="good_evening">Good Evening</string>
    <string name="good_night">Good Night</string>
    <string name="hello">Hello,</string>
    <string name="manual_input_courseid"><u>Manual input CourseID</u></string>
    <string name="back_with_less_than">&#60; Back</string>
    <string name="next_with_bigger_than">Next &#62;</string>
    <string name="start_with_bigger_than">Start &#62;</string>
    <string name="review_with_bigger_than">Review &#62;</string>
    <string name="preview_hand_in"><u>Preview / Submit</u></string>
    <string name="complaint"><u>Complaint</u></string>
    <string name="complaint_without_underscore">Complaint</string>
    <string name="clear_answer"><u>Clear answer</u></string>
    <string name="password_cant_be_empty">Password can\'t be empty</string>
    <string name="new_password_must_match">New password must match</string>
    <string name="unable_to_join_the_course">Unable join to the course</string>
    <string name="fill_all_the_entries">Fill all the entries with valid value.</string>
    <string name="the_email_or_password_incorrct">The email or password is incorrect.</string>
    <string name="click_back_again_exit">Please click back again to exit</string>
    <string name="slash">/</string>
    <string name="times_up">Time\'s up!</string>
    <string name="you_answered_all_questions">You answered all the questions !</string>
    <string name="are_you_sure_submit_quiz">Are you sure to submit this quiz?</string>
    <string name="yes">Yes</string>
    <string name="you_have_completed_quiz">You have completed this quiz</string>
    <string name="no">No</string>
    <string name="things_in_this_course">Things in this course</string>
    <string name="chapter">Chapter</string>
    <string name="learn_now">Learn now</string>
    <string name="play_now">Play now</string>
    <string name="quiz">Quiz</string>
    <string name="ask_now">Ask now</string>
    <string name="qna">QnA</string>
    <string name="download_now">Download now</string>
    <string name="resource">Resource</string>
    <string name="complaint_now">Complaint now</string>
    <string name="by">by</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="example_mail_com">example@mail.com</string>
    <string name="password_hint">********</string>
    <string name="your_answer">Your answer . . .</string>
    <string name="answer_key">Answer key . . .</string>
    <string name="time_left">Time left :</string>
    <string name="review">Review</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="monalisa">Monalisa</string>
    <string name="example_number">08123456789</string>
    <string name="ujol">Ujol</string>
    <string name="change_password">Change password</string>
    <string name="please_remember_your_password">Please remember your password</string>
    <string name="recent_password">Recent password</string>
    <string name="new_password">New password</string>
    <string name="retype_new_password">Retype new password</string>
    <string name="input_the_course_id">Input the course ID</string>
    <string name="manual_input_for_join_course">Manual input for join course</string>
    <string name="examplecourseid">examplecourseID</string>
    <string name="check">Check</string>
    <string name="enter_course_password">Enter course password</string>
    <string name="join">Join</string>
    <string name="scan_the_qr_code">Scan the QR code</string>
    <string name="are_you_sure_leave_this_course">Are you sure leave this course?</string>
    <string name="you_must_rejoin_to_this_course_to_able_see_and_partake_in_this_course">You must rejoin to this course to able see and partake in this course</string>
    <string name="cancel">Cancel</string>
    <string name="leave">Leave</string>
    <string name="are_you_sure_exit_this_quiz">Are you sure exit this quiz?</string>
    <string name="you_will_lose_your_progress_on_this_quiz">You will lose your progress on this quiz</string>
    <string name="preview">Preview</string>
    <string name="submit">Submit</string>
    <string name="there_is_no_chapter_in_this_course">- There is no chapter in this course -</string>
    <string name="there_is_no_complaint_in_this_course">- There is no complaint in this course, to assign a complaint you must partake on quiz -</string>
    <string name="there_is_no_qna_in_this_course">- There is no qna in this course -</string>
    <string name="there_is_no_post_in_this_course">- There is no post in this course -</string>
    <string name="there_is_no_comment_in_this_course">- There is no comment in this post -</string>
    <string name="there_is_no_replies_in_this_course">- There is no replies in this comment -</string>
    <string name="you_haven_t_join_any_course_yet">- You haven\'t join any course yet -</string>
    <string name="change">Change</string>
    <string name="save_changes">Save changes</string>
    <string name="logout">Logout</string>
    <string name="if_you_change_your_email_you_will_logout_automatically">If you change your email, you will logout automatically</string>
    <string name="there_is_no_quiz_in_this_course">- There is no quiz in this course -</string>
    <string name="there_is_no_resource_in_this_course">- There is no resource in this course -</string>
    <string name="date">Date :</string>
    <string name="duration">Duration :</string>
    <string name="ongoing">Ongoing</string>
    <string name="random_str">asdkjhaskdljhlkasasdajhd</string>
    <string name="programming_with_kotlinkotlinkotlin">Programming With KotlinKotlinKotlin</string>
    <string name="enter_your_email_and_we_ll_send_you_a_code_to_verify_you">Enter your email and we\'ll send you a code to verify you</string>
    <string name="enter_reset_code">Enter reset code</string>
    <string name="check_your_email_for_that_code">Check your email for that code</string>
    <string name="didn_t_receive_code">Didn\'t receive code?</string>
    <string name="enter_the_code">Enter the code</string>
    <string name="resend_code"><u>Resend code</u></string>
    <string name="success_reset_password">Success reset password</string>
    <string name="enter_password_match">Enter the password and must be match !</string>
    <string name="enter_the_email">Enter the email !</string>
    <string name="resend_the_code"><u>Resend the code</u></string>
    <string name="send_complaint">Send complaint</string>
    <string name="this_complaint_will_be_sent_to_your_instructor">This complaint will be sent to your instructor</string>
    <string name="this_complaint_has_been_sent_to_your_instructor">This complaint has been sent to your instructor</string>
    <string name="started_on">Started on</string>
    <string name="completed_on">Completed on</string>
    <string name="time_taken">Time taken</string>
    <string name="score">Score</string>
    <string name="descriptions">Descriptions</string>
    <string name="your_complaint">Your complaint . . .</string>
    <string name="complaint_description_empty">Complaint descriptions can\'t be empty</string>
    <string name="success_create_complaint">Success create complaint, check on complaint page</string>
    <string name="shimmer_qna_text">Biological sciences is study under the biochemistry, microbiology and evolutionary biology.</string>
    <string name="comments">Comments</string>
    <string name="add_a_replies">Add a replies . . .</string>
    <string name="replies">Replies</string>
    <string name="comment_cant_be_empty">Comment can\'t be empty</string>
    <string name="replies_cant_be_empty">Replies can\'t be empty</string>
    <string name="delete_underline"><u>Delete</u></string>
    <string name="edit_underline"><u>Edit</u></string>
    <string name="update_your_replies">Update your replies</string>
    <string name="update_your_comment">Update your comment</string>
    <string name="delete_replies_title">Delete replies</string>
    <string name="delete_comment_title">Delete comment</string>
    <string name="delete_comment_message">Delete your comment and replies in this comment permanently?</string>
    <string name="delete_replies_message">Delete your replies permanently?</string>
    <string name="delete">Delete</string>
    <string name="score_with_two_dots">Score :</string>
    <string name="started">Started</string>
    <string name="start_in">Start in</string>
    <string name="hours_ago">hours ago</string>
    <string name="minutes_ago">minutes ago</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="you_have_submitted_quiz">You have submitted this quiz, please wait for the score</string>
    <string name="quiz_passed">The quiz has been passed. You can\'t partake on this quiz</string>
    <string name="score_with_two_dotss">Score:</string>
    <string name="your_score">| Your Score:</string>
    <string name="you_havent_answer">You haven\'t answer question number</string>
    <string name="your_answer_two_dots">Your answer :</string>
    <string name="answer_key_two_dots">Answer key :</string>
    <string name="answer_key_with_bracket">(Answer Key)</string>
    <string name="back_to_login">&#60; <u>Back to login</u></string>
    <string name="reason">Reason . . .</string>
    <string name="show_scoring_steps"><![CDATA[Show scoring steps >]]></string>
    <string name="coursine_similarity">Cosine Similarity</string>
    <string name="word_list">Word list</string>
    <string name="masing_masing_anggota_dari_vektor_q_dikalikan_dengan_masing_masing_anggota_dari_dari_vektor_d_dan_hasil_perkalian_tersebut_kemudian_dijumlahkan">Each member of vector <b>q</b> is multiplied by each member of vector <b>d</b> and add up the product</string>
    <string name="anggota_dari_vektor_d_dikuadratkan_dan_dijumlahkan_kemudian_diakarkan">each member of vector <b>d</b>
is squared, added and then square rooted</string>
    <string name="anggota_dari_vektor_p_dikuadratkan_dan_dijumlahkan_kemudian_diakarkan">each member of vector <b>p</b>
is squared, added and then square rooted</string>
    <string name="hasil_yang_diperoleh_dari_langkah_1_dibagikan_dengan_hasil_dari_langkah_2_dan_3_yang_dikalikan_kemudian_hasil_tersebut_dikalikan">The product from step 1 is divided by the product from step 2 and 3 which has been multiplied before, and then the product is multiplied</string>
    <string name="setelah_memproyeksikan_kedua_teks_tersebut_maka_didapatkan_vektor_kedua_teks_yaitu">After both texts is projected, then we\'ll get the vector of both texts which shown :</string>
    <string name="rasio_kemunculan_kata_pada_kalimat_jawaban_siswa">= Ratio of the text appeared in student\'s answer sentence</string>
    <string name="rasio_kemunculan_kata_pada_kalimat_kunci_jawaban">= Ratio of the text appeared in answer key sentence</string>
    <string name="info">Info</string>
    <string name="bobot_nilai_dari">Maximum score of this question is </string>
    <string name="maka_hasil_yang"> , your cosine score is </string>
    <string name="dikalikan_dengan"> multiplies with </string>
    <string name="dengan_pembulatan_maka"> with rounding, your final score is:</string>
</resources>
