<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_blue_gradient_login">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twenty_four_dp"
            android:layout_marginRight="@dimen/twenty_four_dp"
            android:paddingBottom="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/btn_login"
                style="@style/NoCaps"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_four_dp"
                android:background="@drawable/card_toscha"
                android:text="@string/login"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="@id/il_password_layout"
                app:layout_constraintRight_toRightOf="@id/il_password_layout"
                app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />

            <ImageView
                android:id="@+id/iv_login_logo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/ic_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="@dimen/eight_dp"
                android:indeterminateDrawable="@drawable/custom_progressbar"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/btn_login"
                app:layout_constraintRight_toRightOf="@id/btn_login"
                app:layout_constraintTop_toTopOf="@id/btn_login" />


            <TextView
                android:id="@+id/tv_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/eight_dp"
                android:layout_marginEnd="@dimen/twelve_dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorAccent"
                app:layout_constraintRight_toRightOf="@id/il_password_layout"
                app:layout_constraintTop_toBottomOf="@id/il_password_layout" />

            <TextView
                android:id="@+id/tv_email_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/twelve_dp"
                android:layout_marginTop="@dimen/twelve_dp"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="@dimen/h3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_login_logo" />

            <TextView
                android:id="@+id/tv_password_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/twelve_dp"
                android:layout_marginTop="@dimen/twelve_dp"
                android:text="@string/password"
                android:textColor="@color/white"
                android:textSize="@dimen/h3"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/il_email_layout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twelve_dp"
                app:layout_constraintLeft_toLeftOf="@id/btn_login"
                app:layout_constraintRight_toRightOf="@id/btn_login"
                app:layout_constraintTop_toBottomOf="@id/btn_login">

                <TextView
                    android:id="@+id/tv_dont_have"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/white"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/four_dp"
                    android:text="@string/register"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintLeft_toRightOf="@id/tv_dont_have"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_email_layout"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/four_dp"
                android:background="@drawable/card_white"
                android:paddingStart="@dimen/sixteen_dp"
                android:paddingTop="@dimen/twelve_dp"
                android:paddingEnd="@dimen/sixteen_dp"
                android:paddingBottom="@dimen/twelve_dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_email_tag">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/example_mail_com"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/h3" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_password_layout"
                android:layout_width="@dimen/zero_dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/four_dp"
                android:background="@drawable/card_white"
                android:paddingStart="@dimen/sixteen_dp"
                android:paddingTop="@dimen/twelve_dp"
                android:paddingEnd="@dimen/sixteen_dp"
                android:paddingBottom="@dimen/twelve_dp"
                app:hintEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_password_tag">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="@dimen/h3" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>