<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_details_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_purple_noradius"
            android:padding="@dimen/twelve_dp">

            <TextView
                android:id="@+id/swipe_up_indicator"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/four_dp"
                android:layout_gravity="center"
                android:background="@drawable/card_layout_grey"
                android:padding="@dimen/twenty_four_dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complaint_without_underscore"
                android:textColor="@color/white"
                android:textSize="@dimen/h_medium"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="@dimen/twelve_dp"
                app:layout_constraintTop_toBottomOf="@id/swipe_up_indicator"/>

            <TextView
                android:id="@+id/tv_this_complaint_will"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/this_complaint_will_be_sent_to_your_instructor"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/twelve_dp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_preview"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_complaint_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twenty_four_dp"
                android:padding="@dimen/twelve_dp"
                app:layout_constraintTop_toBottomOf="@id/tv_this_complaint_will"
                android:background="@drawable/card_white">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.3" />

                <TextView
                    android:id="@+id/tag_started"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/started_on"
                    android:textColor="@color/darkGrey"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                    android:id="@+id/tag_completed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/completed_on"
                    android:textColor="@color/darkGrey"
                    android:layout_marginTop="@dimen/eight_dp"
                    app:layout_constraintTop_toBottomOf="@id/tag_started"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                    android:id="@+id/tag_time_taken"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_taken"
                    android:textColor="@color/darkGrey"
                    android:layout_marginTop="@dimen/eight_dp"
                    app:layout_constraintTop_toBottomOf="@id/tag_completed"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                    android:id="@+id/tag_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/score"
                    android:textColor="@color/darkGrey"
                    android:layout_marginTop="@dimen/eight_dp"
                    app:layout_constraintTop_toBottomOf="@id/tag_time_taken"
                    app:layout_constraintLeft_toLeftOf="parent"/>

                <TextView
                    android:id="@+id/tv_started_complaint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/started_on"
                    android:textColor="@color/darkGrey"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="@id/guideline3"/>

                <TextView
                    android:id="@+id/tv_completed_complaint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/completed_on"
                    android:textColor="@color/darkGrey"
                    android:layout_marginTop="@dimen/eight_dp"
                    app:layout_constraintTop_toBottomOf="@id/tag_started"
                    app:layout_constraintLeft_toLeftOf="@id/guideline3"/>

                <TextView
                    android:id="@+id/tv_time_taken_complaint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/time_taken"
                    android:textColor="@color/darkGrey"
                    android:layout_marginTop="@dimen/eight_dp"
                    app:layout_constraintTop_toBottomOf="@id/tag_completed"
                    app:layout_constraintLeft_toLeftOf="@id/guideline3"/>

                <TextView
                    android:id="@+id/tv_score_complaint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/score"
                    android:textColor="@color/darkGrey"
                    android:layout_marginTop="@dimen/eight_dp"
                    app:layout_constraintTop_toBottomOf="@id/tag_time_taken"
                    app:layout_constraintLeft_toLeftOf="@id/guideline3"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tag_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/layout_complaint_details"
                android:layout_marginTop="@dimen/twenty_four_dp"
                android:text="@string/descriptions"
                android:textColor="@color/white"
                app:layout_constraintLeft_toLeftOf="parent"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_complaint_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/twelve_dp"
                android:background="@drawable/card_white"
                android:paddingStart="@dimen/sixteen_dp"
                android:paddingTop="@dimen/twelve_dp"
                android:paddingEnd="@dimen/sixteen_dp"
                android:paddingBottom="@dimen/twelve_dp"
                app:layout_constraintTop_toBottomOf="@id/tag_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/complaint_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textMultiLine"
                    android:singleLine="false"
                    android:ems="10"
                    android:hint="@string/your_complaint"
                    android:textColor="@color/black"
                    android:textColorHint="@color/darkGrey"
                    android:paddingBottom="@dimen/eight_dp"
                    android:textSize="@dimen/h3" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_send_complaint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_complaint_desc"
                android:layout_marginBottom="@dimen/twenty_four_dp"
                style="@style/NoCaps"
                android:padding="@dimen/twelve_dp"
                android:background="@drawable/card_white"
                android:text="@string/send_complaint"
                android:layout_marginTop="@dimen/twenty_four_dp"
                android:textColor="@color/colorPrimaryDark"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>