<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activity_details_bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/twelve_dp"
            android:layout_marginRight="@dimen/twelve_dp"
            android:background="@drawable/card_layout_bottomsheet_white"
            android:padding="@dimen/twelve_dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:indeterminateDrawable="@drawable/custom_progressbar"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/layout_manual_join"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/twelve_dp"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/swipe_up_indicator">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/are_you_sure_leave_this_course"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="@dimen/h2"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/you_must_rejoin_to_this_course_to_able_see_and_partake_in_this_course"
                    android:textAlignment="center"
                    android:textSize="@dimen/h4" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="@dimen/twelve_dp"
                    android:src="@drawable/ic_leave_course"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_cancel"
                        style="@style/NoCaps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginEnd="@dimen/twenty_four_dp"
                        android:layout_marginTop="@dimen/twelve_dp"
                        android:layout_marginBottom="@dimen/twenty_four_dp"
                        android:background="@drawable/card_white"
                        android:padding="@dimen/twelve_dp"
                        android:text="@string/cancel"
                        android:layout_weight="0.5"
                        android:textColor="@color/colorAccent" />

                    <Button
                        android:id="@+id/btn_Leave"
                        style="@style/NoCaps"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="@dimen/twelve_dp"
                        android:layout_marginBottom="@dimen/twenty_four_dp"
                        android:background="@drawable/card_white"
                        android:padding="@dimen/twelve_dp"
                        android:text="@string/leave"
                        android:layout_weight="0.5"
                        android:textColor="@color/red" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/swipe_up_indicator"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/four_dp"
                android:layout_gravity="center"
                android:background="@drawable/card_layout_grey"
                android:padding="@dimen/twenty_four_dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>